Migrate CRA to VITE.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,13 +9,14 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2021,
     "sourceType": "module"
   },
   "extends": [
-    "airbnb",
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "eslint:recommended",
+    "plugin:prettier/recommended"
   ],
   "plugins": ["react"],
   "rules": {
@@ -32,5 +33,10 @@
       }
     }
   ],
-  "ignorePatterns": ["dist/", "build/"]
+  "ignorePatterns": ["dist/", "build/"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
