--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "react-template",
+  "name": "react-vite-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.5.1",
-    "@material-tailwind/react": "^2.1.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tremor/react": "^3.11.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "animate.css": "^4.1.1",
-    "axios": "^1.5.0",
+    "axios": "^1.6.2",
+    "flowbite": "^2.2.0",
     "framer-motion": "^10.16.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-medium-image-zoom": "^5.1.8",
-    "react-multi-carousel": "^2.8.4",
-    "react-notifications": "^1.7.4",
-    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "tailwind": "^4.0.0",
+    "react-toastify": "^9.1.3",
+    "vite": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0 --fix",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -56,16 +54,20 @@
     "@babel/eslint-parser": "^7.22.10",
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.32",
+    "react-hook-form": "^7.49.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.6"
   }
 }
