--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "animate.css": "^4.1.1",
     "axios": "^1.6.2",
-    "flowbite": "^2.2.0",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
