--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-medium-image-zoom": "^5.1.8",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
