--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
     "react-medium-image-zoom": "^5.1.8",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.2",
