--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
+    "reselect": "^5.1.0",
     "vite": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
